--- a/src/popup/actions.css
+++ b/src/popup/actions.css
@@ -134,18 +134,18 @@ body {
   ------ MAIN PAGE ------  
 \*-----------------------*/
 /* user feedback */
-/* .feedback-busy, .feedback-progress {
+.feedback-busy, .feedback-progress {
     position: relative;
     pointer-events: none;
     font-weight: 700;
-    background-image: repeating-linear-gradient(-45deg, 
-                        #223945 10px 30px, 223945
-                        #32728C 30px 50px, 32728C
-                        #508a77 50px 70px, 61A690
-                        #bdbdb8 70px 90px, EFEFE7
-                        #bb5c53 90px 110px F0786D
+    background-image: repeating-linear-gradient(-45deg,
+                        #223945 10px 30px, /* 223945*/
+                        #32728C 30px 50px, /* 32728C*/
+                        #508a77 50px 70px, /* 61A690*/
+                        #bdbdb8 70px 90px, /* EFEFE7*/
+                        #bb5c53 90px 110px /* F0786D*/
                     );
-    background-size: 141px 100%; trig maybe? Makes ends match when color wraps
+    background-size: 141px 100%; /* trig maybe? Makes ends match when color wraps */
     animation-name: backgroundsweep;
     animation-timing-function: linear;
     animation-duration: 3s;
@@ -155,7 +155,7 @@ body {
 @keyframes backgroundsweep {
     from { background-position: 141px center; }
     to   { background-position: 0     center; }
-} */
+}
 .feedback-busy::before, .feedback-progress::before {
     position: absolute;
     top: 0;
